syntax = "proto3";

package passport.user.v1;

option go_package = "github.com/ryanreadbooks/whimer/passport/sdk/user";

message UserInfo {
  uint64 uid = 1;
  string nickname = 2;
  string avatar = 3;
  string style_sign = 4;
  string gender = 5;
}

message BatchGetUserReq {
  repeated uint64 uids = 1;
}

message BatchGetUserRes {
  map<string, UserInfo> users = 1;
}

service User {
  // 批量获取用户信息
  rpc BatchGetUser(BatchGetUserReq) returns (BatchGetUserRes);
}